# orion-interface

./: .gitignore  CHANGELOG  CONTRIBUTING  LICENSE  README.md
orion-interface/: README.md  bun.lockb  index.html  package-lock.json  package.json
orion-interface/src/: App.css  App.tsx  main.tsx
orion-interface/src-tauri/: Cargo.toml  tauri.conf.json
orion-interface/src-tauri/src/: file_manager.rs  github_api.rs  integrations.rs  main.rs
orion-interface/src/components/: ContributorsTab.tsx  IntegrationsTab.tsx  LanguageContext.tsx  MenuSidebar.tsx  SourceCodeTab.tsx  integrations.json  integrations_header.tsx  integrations_listing.tsx  integrations_pattern.tsx  settings_sidebar.tsx
orion-interface/src/components/utils/: languages.json  languages.ts
orion-interface/src/components/utils/integrations/: integ_cont_header.tsx  integ_cont_list.tsx  integ_cont_pattern.tsx
