[package]
name = "Orion"
version = "0.0.6"
description = "A integrations downloader client, for the GOG Galaxy App."
authors = ["Vitor (v-Kaleb) Guttler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-request", "dialog-confirm", "dialog-message", "shell-open", "http-api" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sysinfo = "0.28"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
